--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,9 @@
                             Международное образование с акцентом на английский язык, предпринимательство и современные технологии.
                             {% endblocktrans %}
                           </p>
+                          <a href="#contact-section">
                           <button class="cta-button">{% trans "Получить консультацию" %}</button>
+                          </a>
                       </div>
                       <div class="hero-image">
                           <img class="img" src="{% static './img/b70ae843-2f84-48f5-a351-6de483b1c25b-removebg-preview.png' %}" alt="">
